Page Editor - Design / Tabs cleanup
- Add new PageSummaryComponent and show it on all tabs except for Content
- Reorganize tabs so that there are 4 (settings, seo, embeds, content)
- Add a "View Live Page" button to active pages

--- a/projects/lib/src/admin/components/html-editor/html-editor.component.html
+++ b/projects/lib/src/admin/components/html-editor/html-editor.component.html
@@ -4,4 +4,9 @@
   [init]="resolvedEditorOptions"
   [(ngModel)]="html"
   (onChange)="onEditorChange($event)"
+  (onUndo)="onEditorChange($event)"
+  (onRedo)="onEditorChange($event)"
+  (onKeyUp)="onEditorChange($event)"
+  (onNodeChange)="onEditorChange($event)"
+  (onSetContent)="onEditorChange($event)"
 ></editor>
