--- a/projects/lib/src/admin/components/status-icon/status-icon.component.html
+++ b/projects/lib/src/admin/components/status-icon/status-icon.component.html
@@ -1,2 +1,17 @@
-<svg xmlns="http://www.w3.org/2000/svg" [attr.fill]="color" height="24" viewBox="0 0 24 24" width="16">
-    <circle cx="12" cy="10" r="8" /></svg>
+<svg
+  [ngbTooltip]="status ? 'Live' : 'Disabled'"
+  [disableTooltip]="inline"
+  id="CMS_PAGE_STATUS"
+  aria-describedby="CMS_PAGE_STATUS_LABEL"
+  xmlns="http://www.w3.org/2000/svg"
+  [attr.fill]="color"
+  height="24"
+  viewBox="0 0 24 24"
+  width="16"
+>
+  <circle cx="12" cy="10" r="8" />
+</svg>
+
+<span role="label" id="CMS_PAGE_STATUS_LABEL" class="ml-1" *ngIf="inline">{{
+  status ? "Live" : "Disabled"
+}}</span>
