:bug: errors when using transclusion to load cms-page-editor

--- a/projects/lib/src/admin/components/html-editor/html-editor.component.html
+++ b/projects/lib/src/admin/components/html-editor/html-editor.component.html
@@ -1,5 +1,5 @@
 <editor
-  ng-if="resolvedEditorOptions"
+  ng-if="resolvedEditorOptions && componentMountedToDom"
   [id]="tinymceId"
   [init]="resolvedEditorOptions"
   [(ngModel)]="html"
