allow resource ID and type as attributes to support asset assignment

--- a/projects/lib/src/admin/components/asset-update/asset-update.component.html
+++ b/projects/lib/src/admin/components/asset-update/asset-update.component.html
@@ -7,11 +7,11 @@
             class="card-img-top img-fluid flex-shrink-0" [src]="assetForm.controls['Url'].value" />
           <ng-container *ngIf="isNew">
             <small>{{ (assetForm?.controls)["FileName"]?.value }}</small>
-            <button *ngIf="(assetForm?.controls)['Url']?.value" type="button" class="btn btn-sm btn-danger"
+            <button *ngIf="(assetForm?.controls)['File']?.value" type="button" class="btn btn-sm btn-danger"
               (click)="deleteFile()">
               Remove {{ assetType }}
             </button>
-            <div *ngIf="!(assetForm?.controls)['Url']?.value" class="dropzone" cmsDragAndDrop
+            <div *ngIf="!(assetForm?.controls)['File']?.value" class="dropzone" cmsDragAndDrop
               (fileDropped)="uploadFile($event)">
               <input type="file" #fileDropRef id="fileDropRef" (change)="uploadFile($event.target.files[0])" />
               <p class="mb-0">Drage and drop {{ assetType }} here
@@ -25,11 +25,7 @@
           <button *ngIf="!isNew" type="button" class="btn btn-default">
             <label class="mb-0" for="{{ asset ? asset.ID : 'new' }}">
               <small>
-                {{
-                assetForm.controls["Url"] && assetForm.controls["Url"].value
-                  ? "Replace"
-                  : "Add"
-              }}
+                {{assetForm.controls['Url'].value ? "Replace" : "Add"}}
                 <span class="d-none d-sm-block">{{ assetType }}</span>
               </small>
             </label>
@@ -40,12 +36,7 @@
         <div class="form-group">
           <label for="Title">Title</label>
           <input type="text" formControlName="Title" class="form-control" id="Title" placeholder="Title"
-            autofocus="true" pattern="([A-Za-z0-9\-\_]+)" autocomplete="off" />
-        </div>
-        <div class="form-group">
-          <label for="ID">ID</label>
-          <input type="text" formControlName="ID" class="form-control" id="ID" placeholder="ID" autofocus="true"
-            pattern="([A-Za-z0-9\-\_]+)" autocomplete="off" />
+            autofocus="true" autocomplete="off" />
         </div>
         <div class="form-group">
           <label for="Url">Url</label>
